@@ -5,6 +5,7 @@ Revision history for Ixchel
 		- add -r for the xeno action
 		- convert to Pod::Usage and no longer use the method help
 		- sagan_rules massive re-work... now updates the file from a specified base file
+		- Various cleanup to make exec status lines for xeno_build more readable.
 
 0.1.1   2023-11-17/12:00
         - Makefile.PL update
